[package]
name = "asoca"
version = "0.1.0"
edition = "2021"
authors = ["Sophie Leochina"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
color-eyre = "0.6.2"
env_logger = "0.11.2"
humantime = "2.1.0"
itertools = "0.12.1"
local-ip-address = "0.6.1"
log = { version = "0.4.20", features = ["std"] }
once_cell = "1.19.0"
openssl = { version = "0.10.62" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
uuid = { version = "1.7.0", features = ["v7"] }


[features]
vendored_openssl = ["openssl/vendored"]
